// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptModal renders 1`] = `
<body
  style="overflow: hidden; padding-right: 1024px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="fixed z-[1300] inset-0 flex flex-col text-lg justify-center items-center MuiModal-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="opacity-0 transition-opacity MuiModal-backdrop fixed -z inset-0 bg-black bg-opacity -webkit-tap-highlight-color"
      style="transition-duration: 300ms; opacity: 1;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="opacity-0 transition-opacity bg-white relative outline-none overflow-y shadow-2 flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[32.5rem] max-h-[calc(100%_ sm:max-h-[calc(100%_"
      role="dialog"
      style="transition-duration: 300ms; opacity: 1;"
      tabindex="-1"
    >
      <div
        class="PicassoModalTitle-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2"
        >
          Test title
        </h2>
      </div>
      <div
        class="PicassoModalContent-wrapper"
      >
        <div
          class="PicassoModalContent-modalContent"
        >
          <p
            class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
          >
            Test message
          </p>
        </div>
      </div>
      <div
        class="PicassoModalAction-root"
      >
        <button
          class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
          data-component-type="button"
          tabindex="0"
          type="button"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
          >
            Cancel
          </span>
        </button>
        <button
          class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
          data-component-type="button"
          tabindex="0"
          type="button"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
          >
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="fixed z-[1300] inset-0 flex flex-col text-lg justify-center items-center MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity MuiModal-backdrop fixed -z inset-0 bg-black bg-opacity -webkit-tap-highlight-color"
          style="transition-duration: 300ms; opacity: 1;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="0"
        />
        <div
          class="opacity-0 transition-opacity bg-white relative outline-none overflow-y shadow-2 flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[32.5rem] max-h-[calc(100%_ sm:max-h-[calc(100%_"
          role="dialog"
          style="transition-duration: 300ms; opacity: 1;"
          tabindex="-1"
        >
          <div
            class="PicassoModalTitle-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Test title
            </h2>
          </div>
          <div
            class="PicassoModalContent-wrapper"
          >
            <div
              class="PicassoModalContent-modalContent"
            >
              <p
                class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
              >
                Test message
              </p>
            </div>
          </div>
          <div
            class="PicassoModalAction-root"
          >
            <button
              class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
              >
                Cancel
              </span>
            </button>
            <button
              class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 3`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt with input returns result on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;
